// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfiniteList /> on Container expect to render 1`] = `
<div
  className="-risl-container"
>
  <div>
    Child 1
  </div>
  <div>
    Child 2
  </div>
  <div>
    Child 3
  </div>
  <div
    className="-risl-sentinel"
  />
</div>
`;

exports[`<InfiniteList /> on Container expect to render with custom className 1`] = `
<div
  className="custom-infinite-list"
>
  <div>
    Child 1
  </div>
  <div>
    Child 2
  </div>
  <div>
    Child 3
  </div>
  <div
    className="-risl-sentinel"
  />
</div>
`;

exports[`<InfiniteList /> on Container expect to render with custom tagName 1`] = `
<ul
  className="-risl-container"
>
  <div>
    Child 1
  </div>
  <div>
    Child 2
  </div>
  <div>
    Child 3
  </div>
  <li
    className="-risl-sentinel"
  />
</ul>
`;

exports[`<InfiniteList /> on Container expect to render with threshold 1`] = `
<div
  className="-risl-container"
>
  <div>
    Child 1
  </div>
  <div>
    Child 2
  </div>
  <div>
    Child 3
  </div>
  <div
    className="-risl-sentinel"
  />
</div>
`;
